# ESP32P4_DISPLAY_MJPEG

./: CMakeLists.txt  partitions.csv  sdkconfig.old
.cache/clangd/index/: esp_lcd_ek79007.c.925E689CD9D057CC.idx  esp_lcd_ek79007.h.B435C8EA45123E5B.idx  esp_lcd_ili9881c.c.06BEE3067010A9E1.idx  esp_lcd_ili9881c.h.0A498CD9ABE11239.idx  jpeg_decoder.c.1E9CAEF7C8F0C117.idx  jpeg_decoder.h.45A3866035D8CD31.idx  ppa_dsi_main.c.56BEC6E4B785671B.idx  tjpgd.c.8443E699F2F57B92.idx  tjpgd.h.17A5ACD9F0E5FCBC.idx  tjpgdcnf.h.D607B5284C16A459.idx
main/: CMakeLists.txt  Kconfig.projbuild  ppa_dsi_main.c
